Fix T56940: crash rendering with OpenGL as engine.